Tee Hee Literally

--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 
 </head>
     <body>
-        <h1>Hello, again!</h1>
+        <h1>Hello, again! teeHee</h1>
         <p>Developed with humans in mind</p>
     </body>
 </html>
