--- a/main.html
+++ b/main.html
@@ -10,7 +10,35 @@
 
 </head>
     <body>
-        <h1>Hello, again!</h1>
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+            <a id="brand" class="navbar-brand" href="main.html">4O4</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a id="about" class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Features</a>
+                    </li>
+<!--                    <li class="nav-item">-->
+<!--                        <a class="nav-link" href="#">Pricing</a>-->
+<!--                    </li>-->
+<!--                    <li class="nav-item">-->
+<!--                        <a class="nav-link disabled" href="#">Disabled</a>-->
+<!--                    </li>-->
+                </ul>
+            </div>
+        </nav>
+
         <p>Developed with humans in mind</p>
+
+        <script>
+            $(function(){
+                $("#about").load("nav.html");
+            });
+        </script>
     </body>
 </html>
