--- a/main.html
+++ b/main.html
@@ -4,12 +4,17 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <script src="js/bootstrap.min.js" ></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="/js/navigation.js"></script>
 
     <meta charset="UTF-8">
     <title>Another website</title>
 
 </head>
     <body>
+
+        <p>Developed with humans in mind</p>
+        <nav class="navbar navbar-default ">
+        </nav>
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
             <a id="brand" class="navbar-brand" href="main.html">4O4</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a id="about" class="nav-link" href="#">About</a>
+                        <a id="about" class="nav-link" href="#" onclick="showAbout()">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Features</a>
@@ -33,12 +38,12 @@
             </div>
         </nav>
 
-        <p>Developed with humans in mind</p>
+        <div id="content_about" class="container">
+            <p>Some stuff about people is here</p>
+        </div>
 
-        <script>
-            $(function(){
-                $("#about").load("nav.html");
-            });
-        </script>
+        <div id="content_landing" class="container">
+            <p>Developed with humans in mind</p>
+        </div>
     </body>
 </html>
