--- a/main.html
+++ b/main.html
@@ -11,11 +11,7 @@
 
 </head>
     <body>
-
-        <p>Developed with humans in mind</p>
-        <nav class="navbar navbar-default ">
-        </nav>
-        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark nav-default">
             <a id="brand" class="navbar-brand" href="#" onclick="showLanding()">4O4</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -38,14 +34,18 @@
             </div>
         </nav>
 
+        <div class="jumbotron d-flex align-items-center justify-content-center">
+            <p id="slogan" onload="typeWriter()"></p>
+            <span id="blinker">▃</span>
+        </div>
+
         <div id="content_about" class="container">
-            <p>Some stuff about people is here</p>
             <div class="container">
                 <div class="row">
-                    <div class="col-sm">
+                    <div style="background-color: black" class="col-md-4 offset-md-1">
                         Person 1
                     </div>
-                    <div class="col-sm">
+                    <div style="background-color: black" class="col-md-4 offset-md-2">
                         Person 2
                     </div>
                 </div>
@@ -53,7 +53,7 @@
         </div>
 
         <div id="content_landing" class="container">
-            <p>Developed with humans in mind</p>
+            <p>Hello, again!</p>
         </div>
     </body>
 </html>
