removed "hello, again"

--- a/main.html
+++ b/main.html
@@ -53,7 +53,7 @@
         </div>
 
         <div id="content_landing" class="container">
-            <p>Hello, again!</p>
+<!--            <p>Hello, again!</p>-->
         </div>
     </body>
 </html>
