--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
     <script src="js/bootstrap.min.js" ></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="js/navigation.js"></script>
+    <script src="js/anime.js"></script>
 
     <meta charset="UTF-8">
     <title>Another website</title>
@@ -42,11 +43,11 @@
         <div id="content_about" class="container">
             <div class="container">
                 <div class="row">
-                    <div style="background-color: black" class="col-md-4 offset-md-1">
-                        Person 1
+                    <div class="col-md-4 offset-md-1 test name">
+                        Daryl Nakamoto
                     </div>
-                    <div style="background-color: black" class="col-md-4 offset-md-2">
-                        Person 2
+                    <div class="col-md-4 offset-md-2 name">
+                        Ruben Renteria
                     </div>
                 </div>
             </div>
