--- a/main.html
+++ b/main.html
@@ -13,14 +13,14 @@
 </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark nav-default">
-            <a id="brand" class="navbar-brand" href="#" onclick="showLanding()">4O4</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <a id="brand" class="navbar-brand" href="main.html">RnD</a>
+<!--            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--                <span class="navbar-toggler-icon"></span>-->
+<!--            </button>-->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a id="about" class="nav-link" href="#" onclick="showAbout()">About</a>
+                        <a id="about" class="nav-link" href="./pages/about.html">About</a>
                     </li>
 <!--                    <li class="nav-item">-->
 <!--                        <a class="nav-link" href="#">Features</a>-->
@@ -54,7 +54,6 @@
         </div>
 
         <div id="content_landing" class="container">
-<!--            <p>Hello, again!</p>-->
         </div>
     </body>
 </html>
