--- a/pages/about.html
+++ b/pages/about.html
@@ -12,48 +12,40 @@
 
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark nav-default">
-    <a id="brand" class="navbar-brand" href="../main.html">RnD</a>
-    <!--            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">-->
-    <!--                <span class="navbar-toggler-icon"></span>-->
-    <!--            </button>-->
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a id="about" class="nav-link" href="about.html">About</a>
-            </li>
-            <!--                    <li class="nav-item">-->
-            <!--                        <a class="nav-link" href="#">Features</a>-->
-            <!--                    </li>-->
-            <!--                    <li class="nav-item">-->
-            <!--                        <a class="nav-link" href="#">Pricing</a>-->
-            <!--                    </li>-->
-            <!--                    <li class="nav-item">-->
-            <!--                        <a class="nav-link disabled" href="#">Disabled</a>-->
-            <!--                    </li>-->
-        </ul>
-    </div>
-</nav>
-
-<div class="jumbotron d-flex align-items-center justify-content-center">
-    <p id="abt" onload="typeWriter()"></p>
-    <span id="blinker">▃</span>
-</div>
-
-<div id="content_about" class="container">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4 offset-md-1 test name">
-                Daryl Nakamoto
-            </div>
-            <div class="col-md-4 offset-md-2 name">
-                Ruben Renteria
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-dark nav-default">
+        <a id="brand" class="navbar-brand" href="../index.html">cd ~</a>
+        <!--            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">-->
+        <!--                <span class="navbar-toggler-icon"></span>-->
+        <!--            </button>-->
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a id="about" class="nav-link" href="about.html">Projects</a>
+                </li>
+                <!--                    <li class="nav-item">-->
+                <!--                        <a class="nav-link" href="#">Features</a>-->
+                <!--                    </li>-->
+                <!--                    <li class="nav-item">-->
+                <!--                        <a class="nav-link" href="#">Pricing</a>-->
+                <!--                    </li>-->
+                <!--                    <li class="nav-item">-->
+                <!--                        <a class="nav-link disabled" href="#">Disabled</a>-->
+                <!--                    </li>-->
+            </ul>
         </div>
-    </div>
-</div>
+    </nav>
 
-<div id="content_landing" class="container">
-</div>
+    <div class="jumbotron d-flex align-items-center justify-content-center">
+        <p id="abt" onload="typeWriter()"></p>
+        <span id="blinker">▃</span>
+    </div>
+
+    <div id="content_about" class="container">
+
+    </div>
+
+    <div>
+        <p id="status">Status: In development</p>
+    </div>
 </body>
 </html>
