update landing page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
             <div class="row">
                 <div class="col text-center">
-                    <div class="align-vert"><img id="me-pic" src="/imgs/me_web.jpg" alt="A picture of me is suppose to be here" class="me-border">
+                    <div class="align-vert"><img id="me-pic" src="./imgs/me_web.jpg" alt="A picture of me is suppose to be here" class="me-border">
                         <!-- EMPTY -->
                     </div>
                 </div>
