Add more info about Daryl

--- a/index.html
+++ b/index.html
@@ -44,9 +44,18 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col text-center">
+                <div class="col-5 my-auto text-right">
                     <div class="align-vert"><img id="me-pic" src="./imgs/me_web.jpg" alt="A picture of me is suppose to be here" class="me-border">
                         <!-- EMPTY -->
+                    </div>
+                </div>
+                <div class="col my-auto text-left">
+                    <div class="card border-0 me-card rounded-500">
+                        <div class="card-body">
+                          <h5 class="card-title">Undergraduate, ML Researcher</h5>
+                          <h6 class="card-subtitle mb-2 text-muted"><a class="me-school" href="https://ucsd.edu/" target="_blank">University of California, San Diego</a></h6>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
                     </div>
                 </div>
             </div>
