Animate picture and about card

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
     <script src="js/bootstrap.min.js" ></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="js/navigation.js"></script>
@@ -45,15 +46,15 @@
             </div>
             <div class="row">
                 <div class="col-5 my-auto text-right">
-                    <div class="align-vert"><img id="me-pic" src="./imgs/me_web.jpg" alt="A picture of me is suppose to be here" class="me-border">
+                    <div class="align-vert"><img id="me-pic" src="./imgs/me_web.jpg" alt="A picture of me is suppose to be here" class="me-border animate__animated animate__fadeInLeftBig">
                         <!-- EMPTY -->
                     </div>
                 </div>
                 <div class="col my-auto text-left">
-                    <div class="card border-0 me-card rounded-500">
+                    <div class="card border-0 me-card rounded-500 animate__animated animate__fadeInLeftBig">
                         <div class="card-body">
-                          <h5 class="card-title">Undergraduate, ML Researcher</h5>
-                          <h6 class="card-subtitle mb-2 text-muted"><a class="me-school" href="https://ucsd.edu/" target="_blank">University of California, San Diego</a></h6>
+                          <h4 class="card-title">Undergraduate, ML Researcher</h5>
+                          <h5 class="card-subtitle mb-2 text-muted"><a class="me-school" href="https://ucsd.edu/" target="_blank">University of California, San Diego</a></h6>
                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         </div>
                     </div>
