--- a/index.html
+++ b/index.html
@@ -1,38 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
-    <script src="js/bootstrap.min.js" ></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="js/navigation.js"></script>
-    <script src="js/anime.js"></script>
+    <head>
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="js/bootstrap.min.js" ></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="js/navigation.js"></script>
+        <script src="js/anime.js"></script>
 
-    <meta charset="UTF-8">
-    <title>Another website</title>
+        <meta charset="UTF-8">
+        <title>Another website</title>
 
-</head>
+    </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark justify-content-center">
-            <a id="brand" class="navbar-brand" href="index.html">cd ~</a>
-<!--            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--                <span class="navbar-toggler-icon"></span>-->
-<!--            </button>-->
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+        <nav class="navbar navbar-expand-md navbar-dark justify-content-center" style="background-color: rgb(43, 43, 43);">
+            <a href="./index.html" class="navbar-brand d-flex w-50 mr-auto home">cd ~</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar3">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse w-100" id="collapsingNavbar3">
+                <ul class="navbar-nav w-100 justify-content-center">
                     <li class="nav-item">
-                        <a id="about" class="nav-link" href="https://github.com/darylnak" target="_blank">Projects</a>
+                        <a class="nav-link" href="#">(Links to work soon...)</a>
                     </li>
-<!--                    <li class="nav-item">-->
-<!--                        <a class="nav-link" href="#">Features</a>-->
-<!--                    </li>-->
-<!--                    <li class="nav-item">-->
-<!--                        <a class="nav-link" href="#">Pricing</a>-->
-<!--                    </li>-->
-<!--                    <li class="nav-item">-->
-<!--                        <a class="nav-link disabled" href="#">Disabled</a>-->
-<!--                    </li>-->
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Research</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Misc</a>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
+                    <li class="nav-item my-auto">
+                        <a href="https://www.linkedin.com/in/daryl-nakamoto-134424120/" target="_blank"><i class="fa fa-linkedin-square" style="color: rgb(255, 249, 239);font-size: 2em;"></i></a>
+                    </li>
+                    <li class="nav-item my-auto">
+                        <a href="https://github.com/darylnak" target="_blank"><i class="fa fa-github-square" style="color: rgb(255, 249, 239);font-size: 2em;margin-left: .5em;"></i></a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -52,10 +61,12 @@
                 </div>
                 <div class="col my-auto text-left">
                     <div class="card border-0 me-card rounded-500 animate__animated animate__fadeInLeftBig">
-                        <div class="card-body">
+                        <div class="card-body align-items-center">
                           <h4 class="card-title">Undergraduate, ML Researcher</h5>
-                          <h5 class="card-subtitle mb-2 text-muted"><a class="me-school" href="https://ucsd.edu/" target="_blank">University of California, San Diego</a></h6>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <h5 class="card-subtitle mb-2 text-muted"><a class="me-school" href="https://ucsd.edu/" target="_blank" title="Go Tritons!">University of California, San Diego</a></h6>
+                          <p class="card-text">Hey, there! I am an aspiring software engineer and student in <a class="me-department" href="https://cse.ucsd.edu/" target="=_blank">computer science</a> living in sunny San Diego.</p>
+                          <p class="card-text">I enjoy creating software, as well as things that live on the internet, like this website! I am also interested in machine learning and its applications in fields such as computer vision and predictive analytics. My goals are to create well-engineered products that provide beautiful and performant experiences, as well as conducting high-quality research in my field and interests.</p>
+                          <p class="card-text"></p>
                         </div>
                     </div>
                 </div>
