change animation to fade in

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
             </div>
             <div class="row">
                 <div class="col-5 my-auto text-right">
-                    <div class="align-vert"><img id="me-pic" src="./imgs/me_web.jpg" alt="A picture of me is suppose to be here" class="me-border animate__animated animate__fadeInLeftBig">
+                    <div class="align-vert"><img id="me-pic" src="./imgs/me_web.jpg" alt="A picture of me is suppose to be here" class="me-border animate__animated animate__fadeIn animate__delay-1s">
                         <!-- EMPTY -->
                     </div>
                 </div>
                 <div class="col my-auto text-left">
-                    <div class="card border-0 me-card rounded-500 animate__animated animate__fadeInLeftBig">
+                    <div class="card border-0 me-card rounded-500 animate__animated animate__fadeIn animate__delay-1s">
                         <div class="card-body align-items-center">
                           <h4 class="card-title">Undergraduate, ML Researcher</h5>
                           <h5 class="card-subtitle mb-2 text-muted"><a class="me-school" href="https://ucsd.edu/" target="_blank" title="Go Tritons!">University of California, San Diego</a></h6>
