--- a/index.html
+++ b/index.html
@@ -5,22 +5,24 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
         <script src="js/bootstrap.min.js" ></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="js/navigation.js"></script>
         <script src="js/anime.js"></script>
 
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <title>Another website</title>
 
     </head>
     <body>
         <nav class="navbar navbar-expand-md navbar-dark justify-content-center" style="background-color: rgb(43, 43, 43);">
             <a href="./index.html" class="navbar-brand d-flex w-50 mr-auto home">cd ~</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar3">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="navbar-collapse collapse w-100" id="collapsingNavbar3">
+            <div class="navbar-collapse collapse w-100" id="collapsingNavbar">
                 <ul class="navbar-nav w-100 justify-content-center">
                     <li class="nav-item">
                         <a class="nav-link" href="#">(Links to work soon...)</a>
@@ -37,10 +39,10 @@
                 </ul>
                 <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
                     <li class="nav-item my-auto">
-                        <a href="https://www.linkedin.com/in/daryl-nakamoto-134424120/" target="_blank"><i class="fa fa-linkedin-square" style="color: rgb(255, 249, 239);font-size: 2em;"></i></a>
+                        <a href="https://www.linkedin.com/in/daryl-nakamoto-134424120/" target="_blank"><i class="fa fa-linkedin-square" style="color: rgb(255, 249, 239);font-size: 2em;margin-right: .5em;"></i></a>
                     </li>
                     <li class="nav-item my-auto">
-                        <a href="https://github.com/darylnak" target="_blank"><i class="fa fa-github-square" style="color: rgb(255, 249, 239);font-size: 2em;margin-left: .5em;"></i></a>
+                        <a href="https://github.com/darylnak" target="_blank"><i class="fa fa-github-square" style="color: rgb(255, 249, 239);font-size: 2em;margin-right: .5em;"></i></a>
                     </li>
                 </ul>
             </div>
@@ -62,11 +64,11 @@
                 <div class="col my-auto text-left">
                     <div class="card border-0 me-card rounded-500 animate__animated animate__fadeIn animate__delay-1s">
                         <div class="card-body align-items-center">
-                          <h4 class="card-title">Undergraduate, ML Researcher</h5>
-                          <h5 class="card-subtitle mb-2 text-muted"><a class="me-school" href="https://ucsd.edu/" target="_blank" title="Go Tritons!">University of California, San Diego</a></h6>
-                          <p class="card-text">Hey, there! I am an aspiring software engineer and student in <a class="me-department" href="https://cse.ucsd.edu/" target="=_blank">computer science</a> living in sunny San Diego.</p>
-                          <p class="card-text">I enjoy creating software, as well as things that live on the internet, like this website! I am also interested in machine learning and its applications in fields such as computer vision and predictive analytics. My goals are to create well-engineered products that provide beautiful and performant experiences, as well as conducting high-quality research in my field and interests.</p>
-                          <p class="card-text"></p>
+                          <h2 class="card-title">Undergraduate, ML Researcher</h5>
+                          <h4 class="card-subtitle mb-2 text-muted"><a class="me-school" href="https://ucsd.edu/" target="_blank" title="Go Tritons!">University of California, San Diego</a></h6>
+                          <p class="card-text card-text-size">Hey, there! I am an aspiring software engineer and student in <a class="me-department" href="https://cse.ucsd.edu/" target="=_blank">computer science</a> living in sunny San Diego.</p>
+                          <p class="card-text card-text-size">I enjoy creating software, as well as things that live on the internet, like this website! I am also interested in machine learning and its applications in fields such as computer vision and predictive analytics. My goals are to create well-engineered products that provide beautiful and performant experiences, as well as conducting high-quality research in my field and interests.</p>
+                          <p class="card-text card-text-size"></p>
                         </div>
                     </div>
                 </div>
