update blinker icon

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="row">
                 <div class="col jumbotron d-flex align-items-center justify-content-center">
                     <p id="slogan" onload="typeWriter()"></p>
-                    <span id="blinker">▃</span>
+                    <span id="blinker">—</span>
                 </div>
             </div>
             <div class="row">
