--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-md navbar-dark justify-content-center" style="background-color: rgb(43, 43, 43);">
-            <a href="./index.html" class="navbar-brand d-flex w-50 mr-auto home">Daryl N.</a>
+            <a href="./index.html" class="navbar-brand d-flex w-50 mr-auto home">D / N</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
