--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="card-body align-items-center">
                           <h2 class="card-title">Undergraduate, ML Research Assistant</h5>
                           <h4 class="card-subtitle mb-2 text-muted"><a class="me-school" href="https://ucsd.edu/" target="_blank" title="Go Tritons!">University of California, San Diego</a></h6>
-                          <p class="card-text card-text-size">Hey, there! I am an aspiring software engineer and student in <a class="me-department" href="https://cse.ucsd.edu/" target="=_blank">computer science</a> living in sunny San Diego.</p>
+                          <p class="card-text card-text-size">Hey, there! I am a student in <a class="me-department" href="https://cse.ucsd.edu/" target="=_blank">computer science</a> living in sunny San Diego.</p>
                           <p class="card-text card-text-size">I enjoy creating software, as well as things that live on the internet, like this website! I am also interested in machine learning and its applications in fields such as computer vision and predictive analytics. My goals are to create well-engineered products that provide attractive and performant experiences, as well as conducting high-quality research in my field and interests.</p>
                           <p class="card-text card-text-size"></p>
                         </div>
