--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     </head>
     <body>
-        <nav class="navbar navbar-expand-md navbar-dark justify-content-center" style="background-color: rgb(43, 43, 43);">
+        <nav class="navbar nav-color navbar-expand-md navbar-dark justify-content-center">
             <a href="./index.html" class="navbar-brand d-flex w-50 mr-auto home">D / N</a>
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
                 <span class="icon-bar top-bar"></span>
