--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <title>Daryl N.</title>
     </head>
     <body>
-        <nav class="navbar nav-color navbar-expand-md navbar-dark justify-content-center">
+        <nav class="navbar nav-color navbar-expand-md navbar-dark justify-content-center fixed-top">
             <a href="./index.html" class="navbar-brand d-flex w-50 mr-auto home">D / N</a>
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
                 <span class="icon-bar top-bar"></span>
