fix name not typing

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                     </li>
                 </ul>
                 <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
-                    <li class="nav-item my-auto">
+                    <li class="nav-item my-auto soc-med">
                         <a href="https://www.linkedin.com/in/daryl-nakamoto-134424120/" target="_blank"><i class="fa fa-linkedin-square" style="color: rgb(255, 249, 239);font-size: 2em;margin-right: .5em;"></i></a>
                     </li>
-                    <li class="nav-item my-auto">
+                    <li class="nav-item my-auto soc-med">
                         <a href="https://github.com/darylnak" target="_blank"><i class="fa fa-github-square" style="color: rgb(255, 249, 239);font-size: 2em;margin-right: .5em;"></i></a>
                     </li>
                 </ul>
