realign menu icons under hamburger close

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
                         <a class="nav-link" href="#">Misc</a>
                     </li>
                 </ul>
-                <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
+                <ul id="soc-med-icos" class="nav ml-auto w-100 navbar-right nav-pills justify-content-end">
                     <li class="nav-item my-auto soc-med">
-                        <a href="https://www.linkedin.com/in/daryl-nakamoto-134424120/" target="_blank"><i class="fa fa-linkedin-square" style="color: rgb(255, 249, 239);font-size: 2em;margin-right: .5em;"></i></a>
+                        <a href="https://www.linkedin.com/in/daryl-nakamoto-134424120/" target="_blank"><i class="fa fa-linkedin-square" style="color: rgb(255, 249, 239);font-size: 2em;"></i></a>
                     </li>
-                    <li class="nav-item my-auto soc-med">
-                        <a href="https://github.com/darylnak" target="_blank"><i class="fa fa-github-square" style="color: rgb(255, 249, 239);font-size: 2em;margin-right: .5em;"></i></a>
+                    <li id="last-ico" class="nav-item my-auto">
+                        <a href="https://github.com/darylnak" target="_blank"><i class="fa fa-github-square" style="color: rgb(255, 249, 239);font-size: 2em;"></i></a>
                     </li>
                 </ul>
             </div>
