--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        
+        <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
         <script src="js/bootstrap.min.js" ></script>
         <script src="js/navigation.js"></script>
@@ -65,7 +66,7 @@
                 <div class="col my-auto text-left">
                     <div class="card border-0 me-card rounded-500 animate__animated animate__fadeIn animate__delay-1s">
                         <div class="card-body align-items-center">
-                          <h2 class="card-title">Undergraduate, ML Research Assistant</h5>
+                          <h7 class="card-title">Hey, I</h5>
                           <h4 class="card-subtitle mb-2 text-muted"><a class="me-school" href="https://ucsd.edu/" target="_blank" title="Go Tritons!">University of California, San Diego</a></h6>
                           <p class="card-text card-text-size">Hey, there! I am a student in <a class="me-department" href="https://cse.ucsd.edu/" target="=_blank">computer science</a> living in sunny San Diego.</p>
                           <p class="card-text card-text-size">I enjoy creating software, as well as things that live on the internet, like this website! I am also interested in machine learning and its applications in fields such as computer vision and predictive analytics. My goals are to create well-engineered products that provide attractive and performant experiences, as well as conducting high-quality research in my field and interests.</p>
