--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <span class="icon-bar bottom-bar"></span>	
             </button>
             <div class="navbar-collapse collapse w-100" id="collapsingNavbar">
-                <ul class="navbar-nav w-100 justify-content-center">
+                <!-- <ul class="navbar-nav w-100 justify-content-center">
                     <li class="nav-item">
                         <a class="nav-link" href="#">(Links to work soon...)</a>
                     </li>
@@ -37,7 +37,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Misc</a>
                     </li>
-                </ul>
+                </ul> -->
                 <ul id="soc-med-icos" class="nav ml-auto w-100 navbar-right nav-pills justify-content-end">
                     <li class="nav-item my-auto soc-med">
                         <a href="https://www.linkedin.com/in/daryl-nakamoto-134424120/" target="_blank"><i class="fa fa-linkedin-square" style="color: rgb(255, 249, 239);font-size: 2em;"></i></a>
