--- a/index.html
+++ b/index.html
@@ -76,5 +76,8 @@
             </div>
         </div>
 
+        <div id="preloaded-images">
+            <img src="./imgs/me_web.jpg" width="1" height="1" alt="" />
+        </div>
     </body>
 </html>
